Fix layout bugs

--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -1,6 +1,7 @@
 .main-container {
     display: flex;
     flex: 1;
+    max-width: 500px;
 }
 
 .navbar-container {
